# dynamic-frcm

./: .gitignore  README.md  frcapi.py  main.py  pyproject.toml  requirement.txt  test_all.sh  test_frcapi.py
datamodel/: model.py  test_datamodel.py
datamodel/datamodel/: model.py  test_utils.py  utils.py
fireriskmodel/: compute.py  preprocess.py  test_compute.py  utils.py
fireriskmodel/fireriskmodel/: test_testdata.py
src/: main.py
src/frcm/: frcapi.py
src/frcm/datamodel/: model.py  utils.py
src/frcm/fireriskmodel/: compute.py  parameters.py  preprocess.py  utils.py
src/frcm/weatherdata/: client.py  client_met.py  extractor.py  extractor_met.py  utils.py
tests/: test_client_met.py  test_compute.py  test_datamodel.py  test_datamodel_utils.py  test_extractor_met.py  test_frcapi.py  test_weatherdata_utils.py
tests/sampledata/: frost_sample_observation.py  met_sample_forecast.py  met_sample_weatherdata.py
tests/testdata/: test_testweatherdata.py
weatherdata/: client.py  client_met.py  extractor.py  extractor_met.py  test_client_met.py  test_extractor_met.py  test_utils.py  utils.py
weatherdata/sampledata/: frost_sample_observations.json  frost_sample_station.json  frost_sample_weatherdata.py  met_sample_forecast.json
